// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FAQAccordion - Snapshots > matches snapshot with complex answer content 1`] = `
<div
  class="flex w-full flex-col gap-4"
  data-orientation="vertical"
>
  <div
    class="w-full overflow-hidden rounded-lg border border-border"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-«r0»"
        aria-expanded="false"
        class="flex w-full items-center justify-between px-6 py-4 cursor-pointer transition-colors hover:bg-white/5 group"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-«r0»"
        type="button"
      >
        <span
          class="text-left text-base font-semibold"
        >
          Complex question
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down ml-4 flex-shrink-0 transition-transform group-data-[state=open]:rotate-180"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-«r0»"
      class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-«r0»"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
</div>
`;

exports[`FAQAccordion - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex w-full flex-col gap-4 custom-faq-class"
  data-orientation="vertical"
>
  <div
    class="w-full overflow-hidden rounded-lg border border-border"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-«r0»"
        aria-expanded="false"
        class="flex w-full items-center justify-between px-6 py-4 cursor-pointer transition-colors hover:bg-white/5 group"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-«r0»"
        type="button"
      >
        <span
          class="text-left text-base font-semibold"
        >
          What is Pubky?
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down ml-4 flex-shrink-0 transition-transform group-data-[state=open]:rotate-180"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-«r0»"
      class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-«r0»"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
  <div
    class="w-full overflow-hidden rounded-lg border border-border"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-«r0»"
        aria-expanded="false"
        class="flex w-full items-center justify-between px-6 py-4 cursor-pointer transition-colors hover:bg-white/5 group"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-«r0»"
        type="button"
      >
        <span
          class="text-left text-base font-semibold"
        >
          How do I sign up?
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down ml-4 flex-shrink-0 transition-transform group-data-[state=open]:rotate-180"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-«r0»"
      class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-«r0»"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
</div>
`;

exports[`FAQAccordion - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex w-full flex-col gap-4"
  data-orientation="vertical"
>
  <div
    class="w-full overflow-hidden rounded-lg border border-border"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-«r0»"
        aria-expanded="false"
        class="flex w-full items-center justify-between px-6 py-4 cursor-pointer transition-colors hover:bg-white/5 group"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-«r0»"
        type="button"
      >
        <span
          class="text-left text-base font-semibold"
        >
          What is Pubky?
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down ml-4 flex-shrink-0 transition-transform group-data-[state=open]:rotate-180"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-«r0»"
      class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-«r0»"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
  <div
    class="w-full overflow-hidden rounded-lg border border-border"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-«r0»"
        aria-expanded="false"
        class="flex w-full items-center justify-between px-6 py-4 cursor-pointer transition-colors hover:bg-white/5 group"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-«r0»"
        type="button"
      >
        <span
          class="text-left text-base font-semibold"
        >
          How do I sign up?
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down ml-4 flex-shrink-0 transition-transform group-data-[state=open]:rotate-180"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-«r0»"
      class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-«r0»"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
</div>
`;

exports[`FAQAccordion - Snapshots > matches snapshot with empty items 1`] = `
<div
  class="flex w-full flex-col gap-4"
  data-orientation="vertical"
/>
`;
